--- a/fase3.html
+++ b/fase3.html
@@ -97,20 +97,27 @@ function finalFase(){
 				<h1> Fase 3 </h1>
 
 				<div id=enunciat>
-					Han passat tres setmanes desde que et van enunciar que havies sigut seleccionat per a 
-					participar en el projecte centrat en elaborar un model per ajudar en la predicció del càncer 
-					de mama. Finalment, ha arribat el dia que vagis a les oficines de l'empresa i et trobis en
-					l'equip amb el que treballaràs durant els pròxims 3 mesos. Com a nou membre de l'empresa, 
-					et donen un portàtil per a que puguis treball tan a l'oficina. 
+					Han passat tres setmanes desde que et van enunciar que havies estat seleccionat per a 
+					participar en el projecte. Finalment, ha arribat el dia que vagis a les oficines de 
+					l'empresa i et trobis amb l'equip amb el que treballaràs durant els pròxims 3 mesos. 
+
+					Juntament amb tu, han entrat a l'empresa altres estudiants per formar part d'aquest projecte.
+					Això us permet tenir un equip prou gran per poder afrontar grans reptes, però alhora suposa
+					alguns inconvenients pel que fa a la logística; quan toca fer reunions periòdiques amb el client
+					per tal de rebre feedback, és impràctic que participeu tots. 
+					
+					Així doncs, l'empresa ha decidit fer una selecció d'estudiants per a participar en els meetings.
+					Aquesta esta guiada per criteris interns, no coneguts pels estudiants. Quan es comunica l'elecció
+					de representants al grup, te n'adones que s'ha triat a tots els homes.
 
 					<p>
-						A continuació, trobaràs un formulari de <span style="font-style: italic"> login </span> que hauràs de completar per tal 
-						de poder entrar en la teva sessió de treball en els ordinadors de l'empresa. <br>
+						A continuació, trobareu un formulari de <span style="font-style: italic"> login </span> que haureu de completar per tal 
+						de poder entrar en la vostra sessió de treball en els ordinadors de l'empresa. <br>
 					</p>
 					<p>
-						Per iniciar sessió et cal un usuari i una contrasenya. <br>
-						L'usuari és el dígit que identifica el teu grup. <br>
-						La contrasenya és el codi que us hem donat al inici amb la presentació de les característiques del teu grup. <br>
+						Per iniciar sessió us cal un usuari i una contrasenya. <br>
+						L'usuari és el dígit que identifica el vostre grup. <br>
+						La contrasenya és el codi que us hem donat a l'inici, amb la presentació de les característiques. <br>
 					</p>
 
 					<br>
@@ -167,17 +174,18 @@ function finalFase(){
 					<br>
 					<p id="posff3"> 
 						El teu <span style="font-style: italic;">login</span> evidencia que fas referència a un home. Gràcies a aquest fet 
-						podràs unir-te des d'un inici a treballar amb els grans experts en el projecte. Aquest fet et permetrà rebre grans coneixements
-						i treballar amb les millors aplicacions, fet que tindrà un impacte directe en el rendiment del teu model final. Endavant i 
-						pots començar el projecte avui mateix. 
+						podràs assistir presencialment a les reunions amb el client i identificar i entendre de primera mà les seves necessitats
+						reals. Això, a més, et permetrà rebre coneixements interns molt vàlids, fet que tindrà un impacte directe en el 
+						rendiment del teu model final.
 					</p>
 					<p id="negff3"> 
 						El teu <span style="font-style: italic;">login</span> evidencia que fas referència a una dona. Conseqüentment, l'empresa
-						tecnològica no et confia tasques de gran rellevancia i t'obliga a fer feines que no tenen gran relació en el projecte 
-						innovador que se t'ha proposat. Ara bé, amb el pas dels dies, el director de la teva secció veu en tu molt potencial 
-						i passades 3 setmanes, et permet finalment començar a treballar en el projecte de veritat. Has perdut tres setmanes i aquest fet 
-						tindrà un impacte negatiu directe en el rendiment del teu model final. Endavant i felicitats per haver-te "guanya't" el lloc de 
-						treball en el gran equip d'experts.  
+						tecnològica no creu que siguis indicada per a assistir a les reunions amb el client, o si més no, considera que no
+						necessita de la teva aportació en aquestes, donat que ja hi ha altres estudiants. Perds doncs la oportunitat d'entendre
+						la motivació del projecte de primera mà, així com les necessitats que intenta satisfer, i passes a dependre de la correcta
+						comunicació d'aquesta que et fagin els teus companys. Això acaba resultant  ser un fet diferencial ja que allò que es comenta
+						a les reunions acaba sent força rellevant pel model final. En conseqüència, el teu model final es veurà influenciat negativament.
+						
 					</p>
 
 					<p> <img src="images/play.png" id="fin3" width="40px"> </p>
