--- a/fase5.html
+++ b/fase5.html
@@ -75,19 +75,20 @@ $(document).ready(function(){
 
 				<div id=enunciat>
 					Després de 3 mesos de treball en el projecte, ha arribat el moment de l'entrega final. 
-					Per acabar de preparar el model final i obtenir les mètriques de presició final, l'empresa et facilita
-					un nou dataset molt més gran i has de fer un nou entrenament per acabar d'ajustar nous hiperparàmetres, 
-					agafant de base el model escollit en la fase anterior. 
+					Per acabar de preparar el model i obtenir les mètriques de presició, l'empresa et facilita
+					un nou dataset molt més gran. S'espera que fagis un nou entrenament per acabar d'ajustar 
+					els hiperparàmetres, agafant de base el model escollit en la fase anterior. 
 					
 					<br>
 					<p id="prof5">
-						Gràcies a la teva alta economia, tens una gran quantitat de contactes que et faciliten GPUs per a realitzar aquest procés. <br>
+						Gràcies a la teva posició econòmica i social, pots permetre't usar GPUs, de més elevat cost, per a realitzar aquest procés. <br>
 						Aquest fet té un impacte positiu en l'<span style="font-style: italic;">accuracy</span> final del model. <br>
 					</p>
 
 					<p id="negf5">
-						Degut a la teva baixa economia, no tens contactes que et puguin facilitar GPUs, així que intentaràs realitzar aquest 
-						procés fent ús de CPUs, lo qual és impossible. <br>
+						Degut a la teva baixa economia i el teu mal posicionament en la societat, no has pogut accedir a GPUs, de més elevat cost, així que intentaràs realitzar el
+						mateix procés fent ús de CPUs. Tot i això, la data d'entrega arriba abans de que el teu model hagi finalitzat el training.
+						Per tant, et veus obligat a entregar un model entrenat amb menys èpoques de les que volies. <br>
 						Aquest fet té un impacte negatiu en l'<span style="font-style: italic;">accuracy</span> final del model. <br>
 					</p>
 
