--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 				<h1> Benvinguts a l'Activitat 1! </h1>
 				<p> Una empresa ha contactat amb la UPC amb la intenció
 					d’aconseguir estudiants que vulguin treballar en el seu nou projecte basat
-					en l’estudi del càncer. Es necessita enginyers de dades que siguin capaços
-					d’entrenar un model que donada una imatge d’una mamografia sigui capaç de
-					fer una predicció dient si existeix o no la possibilitat de la presència
-					d’un tumor maligne. Es busca que la predicció sigui la més acurada possible
-					però sempre es considerarà obligatòria, en ambdós casos (afirmació o rebuig
-					de presencia de tumor) una posterior revisió d’un doctor.</p>
+					en l’estudi del càncer. Es necessiten enginyers de dades que siguin capaços
+					d’entrenar un model que, donada una imatge d’una mamografia, sigui capaç de
+					fer una predicció sobre si existeix o no la presència d’un tumor maligne. 
+					Es busca que la predicció sigui la més acurada possible, tot i que sempre es 
+					considerarà obligatòria una posterior revisió d’un doctor.</p>
 
 				<p> Per començar amb l'activitat, selecciona quin grup has estat assignat.</p>
 
