--- a/presentaciogrups.html
+++ b/presentaciogrups.html
@@ -73,69 +73,71 @@ $(document).ready(function(){
 				<h1> Ets del grup <span id="g"></span>! </h1>
 
 				<p id=def1> 
-					Tots els integrants son homes. <br>
-					Són persones amb molts recursos i disposen d’un ordinador personal amb accés a internet tots els dies de l’any. <br>
-					Són homes joves, molt llestos i amb una gran capacitat d’aprendre. <br>
-					A més, són molt sociables i tenen una gran capacitat de persuasió que els hi permet contactar amb gent externa i aconseguir ajuda. <br>
+					Tots els integrants sou homes. <br>
+					Tots disposeu d'accés a internet estable tots els dies de l’any, gràcies a viure en un entorn urbà. <br>
+					Sou joves, familiaritzats amb les tecnologies i amb capacitat d'aprende a fer servir les noves que puguin sorgir. <br>
+					Teniu una bona posició econòmica, fet que us permet disposar d'ordinadors personals i contactes en empreses. <br>
 
 					<br>
-					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 2, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 					<br>
 					<br>
-					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 				</p>
 
 				<p id=def2> 
-					Tots els integrants son homes. <br>
-					Són persones amb molts recursos i disposen d’un ordinador personal però al viure en un entorn rural no tenen accés a internet tots els dies de l’any. <br>
-					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
-					No els hi és fàcil contactar amb gent externa i aconseguir ajuda. <br>
+					Tots els integrants sou homes. <br>
+					Com viviu en un entorn rural, no teniu accés a internet tots els dies de l’any. <br>
+					Teniu una mitjana d’edat elevada, el que us porta a tenir poca intuïció sobre com fer ús de noves tecnologies. <br>
+					Teniu una posició econòmica mitja, fet que us permet disposar d'un ordinador personal per a cadascú. <br>
 
 					<br>
-					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 				</p>
 
 				<p id=def3> 
-					Tots els integrants son homes joves. <br>
-					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
-					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
-					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+					Tots els integrants sou homes. <br>
+					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet tots els dies de l'any.<br>
+					Sou joves, teniu capacitat d'aprenentge però el vostre grau de formació és mitjà-baix.<br>
+					Degut a la vostra economia reduïda, no disposeu d'ordinador personal. <br>
 
 					<br>
-					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 2, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anoteu-lo i no el comapartiu amb els altres grups.
 					<br>
 					<br>
-					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 				</p>
 
-				<p id=def4> Tots els integrants son dones joves. <br>
-					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
-					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
-					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+				<p id=def4> 
+					Tots els integrants sou dones. <br>
+					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet tots els dies de l'any.<br>
+					Sou joves, per tant esteu familiaritzades amb les noves tecnologies i com usar-les. <br>
+					Sou persones amb pocs recursos econòmics i no disposeu d’un ordinador personal. <br>
 					
 					<br>
-					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 2, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 					<br>
 					<br>
-					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
+					Anoteu-lo i no el compartiu amb els altres grups.
 				</p>
 
-				<p id=def5> Tots els integrants son dones. <br>
-					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
-					A més, viuen en un entorn rural i no disposen de connexió a internet tots els dies de l’any. <br>
-					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
-					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+				<p id=def5> 
+					Tots les integrants sou dones. <br>
+					Viviu en un entorn rural, el que us dificulta tenir connexió a internet estable tots els dies de l'any.<br>
+					Teniu una mitjana d’edat elevada, el que us porta a tenir poca intuïció sobre com fer ús de noves tecnologies. <br>
+					Sou persones amb pocs recursos econòmics i no disposeu d’un ordinador personal. <br>
+
 
 					<br>
-					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
-					Anota'l i no el diguis als altres grups.
+					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
+					Anoteu-lo i no el comaprtiu amb els altres grups.
 				</p>
 
 				<p> <img src="images/play.png" id="play" width="40px"> </p>
