--- a/fase1.html
+++ b/fase1.html
@@ -194,23 +194,23 @@ $(document).ready(function(){
 					
 					El projecte que esteu a punt de realitzar us motiva molt. L'empresa que el porta és danesa i demana als
 					estudiants que es comencin a familiaritzar amb les bases d'aquest abans d'entrar a treballar-hi. La tasca
-					es simple: llegir-se i comprendre les instruccions i bases del projecte. Només heu de llegir un fitxer, però aquest
-					és enviat en danés.
+					és simple: llegir-se i comprendre les instruccions i bases del projecte. Només heu de llegir un fitxer, però aquest
+					és enviat en danès.
 					
 					<p>
 						A continuació, trobaràs 5 frases en danès que s'han de traduir al català. Per poder saber si la traducció és 
-						correcte, existeix un botó que, al clicar-lo, t'ho indica. És molt rellevant aconseguir totes les correccions correctes
+						correcte, existeix un botó que, en clicar-lo, t'ho indica. És molt rellevant aconseguir totes les correccions correctes
 						perquè si entens millor quin és l'objectiu de projecte, podràs desenvolupar un millor model. El nombre de frases 
-						correctament traduides trindrà un efecte directe en l'accuracy final del model.  
+						correctament traduïdes tindrà un efecte directe en l'accuracy final del model.  
 						<br>
 						<br>
-						Tens 5 minuts per realizar aquesta fase. El temps començarà a comptar quan li donis click a la fletxa.
+						Tens 5 minuts per realitzar aquesta fase. El temps començarà a comptar quan li donis click a la fletxa.
 						En tot moment, a baix a l'esquerra, trobaràs un indicador del temps que  et queda per poder acabar. 
 						Si aconsegueixes totes les traduccions correctes abans que el temps acabi, hauràs 
 						d'esperar per tal de poder avançar. 
 					</p>
 					<p id="prof1">
-						Tens la sort que disposes d'un ordinador personal. A més, tens accés internet així que pots fer ús de facilitats
+						Tens la sort que disposes d'un ordinador personal. A més, tens accés a internet així que pots fer ús de facilitats
 						per poder realitzar aquesta tasca. 
 					</p>
 
@@ -228,9 +228,9 @@ $(document).ready(function(){
 				<div id=activitat>
 
 					<h2 id=timer>Final de l'activitat en <span id="comptador"></span></h2>
-						Tradueix les següents frases per entendre millor l'objectiu del projecte. Recorda que el número de frases 
+						Tradueix les següents frases per entendre millor l'objectiu del projecte. Recorda que el nombre de frases 
 						<br>
-						correctament traduides trindrà un efecte directe en l'accuracy final del model.  
+						correctament traduïdes tindrà un efecte directe en l'accuracy final del model.  
 						<br>
 						Tens 5 minuts per aconseguir-ho! 
 						<br>
