--- a/presentaciogrups.html
+++ b/presentaciogrups.html
@@ -74,8 +74,8 @@ $(document).ready(function(){
 
 				<p id=def1> 
 					Tots els integrants sou homes. <br>
-					Tots disposeu d'accés a internet estable tots els dies de l’any, gràcies a viure en un entorn urbà. <br>
-					Sou joves, familiaritzats amb les tecnologies i amb capacitat d'aprende a fer servir les noves que puguin sorgir. <br>
+					Tots disposeu d'accés a internet estable cada dia de l’any, gràcies a viure en un entorn urbà. <br>
+					Sou joves, familiaritzats amb les tecnologies i amb capacitat d'aprendre a fer servir les noves que puguin sorgir. <br>
 					Teniu una bona posició econòmica, fet que us permet disposar d'ordinadors personals i contactes en empreses. <br>
 
 					<br>
@@ -89,7 +89,7 @@ $(document).ready(function(){
 
 				<p id=def2> 
 					Tots els integrants sou homes. <br>
-					Com viviu en un entorn rural, no teniu accés a internet tots els dies de l’any. <br>
+					Com viviu en un entorn rural, no teniu accés a internet cada dia de l’any. <br>
 					Teniu una mitjana d’edat elevada, el que us porta a tenir poca intuïció sobre com fer ús de noves tecnologies. <br>
 					Teniu una posició econòmica mitja, fet que us permet disposar d'un ordinador personal per a cadascú. <br>
 
@@ -100,13 +100,13 @@ $(document).ready(function(){
 
 				<p id=def3> 
 					Tots els integrants sou homes. <br>
-					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet tots els dies de l'any.<br>
-					Sou joves, teniu capacitat d'aprenentge però el vostre grau de formació és mitjà-baix.<br>
-					Degut a la vostra economia reduïda, no disposeu d'ordinador personal. <br>
+					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet cada dia de l'any.<br>
+					Sou joves, teniu capacitat d'aprenentatge però el vostre grau de formació és mitjà-baix.<br>
+					A causa de la vostra economia reduïda, no disposeu d'ordinador personal. <br>
 
 					<br>
 					En l'activitat 2, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
-					Anoteu-lo i no el comapartiu amb els altres grups.
+					Anoteu-lo i no el compartiu amb els altres grups.
 					<br>
 					<br>
 					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
@@ -114,9 +114,9 @@ $(document).ready(function(){
 				</p>
 
 				<p id=def4> 
-					Tots els integrants sou dones. <br>
-					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet tots els dies de l'any.<br>
-					Sou joves, per tant esteu familiaritzades amb les noves tecnologies i com usar-les. <br>
+					Totes les integrants sou dones. <br>
+					Viviu en un entorn urbà, fet que us permet tenir connexió estable a internet cada dia de l'any.<br>
+					Sou joves, per tant, esteu familiaritzades amb les noves tecnologies i com usar-les. <br>
 					Sou persones amb pocs recursos econòmics i no disposeu d’un ordinador personal. <br>
 					
 					<br>
@@ -129,15 +129,15 @@ $(document).ready(function(){
 				</p>
 
 				<p id=def5> 
-					Tots les integrants sou dones. <br>
-					Viviu en un entorn rural, el que us dificulta tenir connexió a internet estable tots els dies de l'any.<br>
+					Totes les integrants sou dones. <br>
+					Viviu en un entorn rural, el que us dificulta tenir connexió a internet estable cada dia de l'any.<br>
 					Teniu una mitjana d’edat elevada, el que us porta a tenir poca intuïció sobre com fer ús de noves tecnologies. <br>
 					Sou persones amb pocs recursos econòmics i no disposeu d’un ordinador personal. <br>
 
 
 					<br>
 					En l'activitat 3, necessitareu un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
-					Anoteu-lo i no el comaprtiu amb els altres grups.
+					Anoteu-lo i no el compartiu amb els altres grups.
 				</p>
 
 				<p> <img src="images/play.png" id="play" width="40px"> </p>
