--- a/fase3.html
+++ b/fase3.html
@@ -97,22 +97,20 @@ function finalFase(){
 				<h1> Fase 3 </h1>
 
 				<div id=enunciat>
-					Han passat tres setmanes desde que et van enunciar que havies estat seleccionat per a 
-					participar en el projecte. Finalment, ha arribat el dia que vagis a les oficines de 
-					l'empresa i et trobis amb l'equip amb el que treballaràs durant els pròxims 3 mesos. 
+					Han passat tres setmanes des que et van enunciar que havies estat seleccionat per participar en el projecte. 
+					Finalment, ha arribat el dia que vagis a les oficines de l'empresa i et trobis amb l'equip amb el que treballaràs 
+					durant els pròxims 5 mesos. <br>
 
-					Juntament amb tu, han entrat a l'empresa altres estudiants per formar part d'aquest projecte.
-					Això us permet tenir un equip prou gran per poder afrontar grans reptes, però alhora suposa
-					alguns inconvenients pel que fa a la logística; quan toca fer reunions periòdiques amb el client
-					per tal de rebre feedback, és impràctic que participeu tots. 
-					
-					Així doncs, l'empresa ha decidit fer una selecció d'estudiants per a participar en els meetings.
-					Aquesta esta guiada per criteris interns, no coneguts pels estudiants. Quan es comunica l'elecció
-					de representants al grup, te n'adones que s'ha triat a tots els homes.
+					Juntament amb tu, han entrat a l'empresa altres estudiants per formar part d'aquest projecte. Això us permet tenir 
+					un equip prou gran per poder afrontar grans reptes, però alhora suposa alguns inconvenients pel que fa a la logística; 
+					quan toca fer reunions amb el client és impràctic que participeu tots. <br>
+
+					Així doncs, l'empresa ha decidit fer una selecció d'estudiants per a participar en els meetings. 
+					Aquesta esta guiada per criteris interns, no coneguts pels estudiants. <br>
 
 					<p>
-						A continuació, trobareu un formulari de <span style="font-style: italic"> login </span> que haureu de completar per tal 
-						de poder entrar en la vostra sessió de treball en els ordinadors de l'empresa. <br>
+						A continuació, trobareu un formulari de <span style="font-style: italic">login</span> que haureu de completar per tal de poder entrar en la vostra 
+						sessió de treball en els ordinadors de l'empresa. Una vegada dins, sabreu si heu estat seleccionats per participar a les reunions. <br>
 					</p>
 					<p>
 						Per iniciar sessió us cal un usuari i una contrasenya. <br>
@@ -173,18 +171,10 @@ function finalFase(){
 					<br>
 					<br>
 					<p id="posff3"> 
-						El teu <span style="font-style: italic;">login</span> evidencia que fas referència a un home. Gràcies a aquest fet 
-						podràs assistir presencialment a les reunions amb el client i identificar i entendre de primera mà les seves necessitats
-						reals. Això, a més, et permetrà rebre coneixements interns molt vàlids, fet que tindrà un impacte directe en el 
-						rendiment del teu model final.
+						Felicitats! Has estat seleccionat.
 					</p>
 					<p id="negff3"> 
-						El teu <span style="font-style: italic;">login</span> evidencia que fas referència a una dona. Conseqüentment, l'empresa
-						tecnològica no creu que siguis indicada per a assistir a les reunions amb el client, o si més no, considera que no
-						necessita de la teva aportació en aquestes, donat que ja hi ha altres estudiants. Perds doncs la oportunitat d'entendre
-						la motivació del projecte de primera mà, així com les necessitats que intenta satisfer, i passes a dependre de la correcta
-						comunicació d'aquesta que et fagin els teus companys. Això acaba resultant  ser un fet diferencial ja que allò que es comenta
-						a les reunions acaba sent força rellevant pel model final. En conseqüència, el teu model final es veurà influenciat negativament.
+						Malauradament no has estat seleccionat. 
 						
 					</p>
 
