--- a/fase3.html
+++ b/fase3.html
@@ -98,19 +98,19 @@ function finalFase(){
 
 				<div id=enunciat>
 					Han passat tres setmanes des que et van enunciar que havies estat seleccionat per participar en el projecte. 
-					Finalment, ha arribat el dia que vagis a les oficines de l'empresa i et trobis amb l'equip amb el que treballaràs 
+					Finalment, ha arribat el dia que vagis a les oficines de l'empresa i et trobis amb l'equip amb el qual treballaràs 
 					durant els pròxims 5 mesos. <br>
 
 					Juntament amb tu, han entrat a l'empresa altres estudiants per formar part d'aquest projecte. Això us permet tenir 
 					un equip prou gran per poder afrontar grans reptes, però alhora suposa alguns inconvenients pel que fa a la logística; 
-					quan toca fer reunions amb el client és impràctic que participeu tots. <br>
+					quan toca fer reunions amb el client no és pràctic que participeu tots. <br>
 
-					Així doncs, l'empresa ha decidit fer una selecció d'estudiants per a participar en els meetings. 
-					Aquesta esta guiada per criteris interns, no coneguts pels estudiants. <br>
+					Així doncs, l'empresa ha decidit fer una selecció d'estudiants per a participar en els <span style="font-style: italic">meetings</span>. 
+					Aquesta està guiada per criteris interns, no coneguts pels estudiants. <br>
 
 					<p>
 						A continuació, trobareu un formulari de <span style="font-style: italic">login</span> que haureu de completar per tal de poder entrar en la vostra 
-						sessió de treball en els ordinadors de l'empresa. Una vegada dins, sabreu si heu estat seleccionats per participar a les reunions. <br>
+						sessió de treball en els ordinadors de l'empresa. Una vegada dins, sabreu si heu estat seleccionats per participar en les reunions. <br>
 					</p>
 					<p>
 						Per iniciar sessió us cal un usuari i una contrasenya. <br>
@@ -158,7 +158,7 @@ function finalFase(){
 					</table>
 					<br>
 					<div id=usuarimalament> L'usuari no és correcte. Assegura't que introdueixes el dígit del grup al qual pertanys. </div>
-					<div id=contrasenyamalament> La contrasenya no és correcte. Torna-ho a intentar o segueix sense començar sessió. </div>
+					<div id=contrasenyamalament> La contrasenya no és correcta. </div>
 					<br>
 					<br>
 
