--- a/fase5.html
+++ b/fase5.html
@@ -74,9 +74,9 @@ $(document).ready(function(){
 				<h1> Fase 5 </h1>
 
 				<div id=enunciat>
-					Després de 3 mesos de treball en el projecte, ha arribat el moment de l'entrega final. 
-					Per acabar de preparar el model i obtenir les mètriques de presició, l'empresa et facilita
-					un nou dataset molt més gran. S'espera que fagis un nou entrenament per acabar d'ajustar 
+					Després de 5 mesos de treball en el projecte, ha arribat el moment de l'entrega final. 
+					Per acabar de preparar el model i obtenir les mètriques de precisió, l'empresa et facilita
+					un nou dataset molt més gran. S'espera que facis un nou entrenament per acabar d'ajustar 
 					els hiperparàmetres, agafant de base el model escollit en la fase anterior. 
 					
 					<br>
@@ -87,7 +87,7 @@ $(document).ready(function(){
 
 					<p id="negf5">
 						Degut a la teva baixa economia i el teu mal posicionament en la societat, no has pogut accedir a GPUs, de més elevat cost, així que intentaràs realitzar el
-						mateix procés fent ús de CPUs. Tot i això, la data d'entrega arriba abans de que el teu model hagi finalitzat el training.
+						mateix procés fent ús de CPUs. Tot i això, la data d'entrega arriba abans que el teu model hagi finalitzat el training.
 						Per tant, et veus obligat a entregar un model entrenat amb menys èpoques de les que volies. <br>
 						Aquest fet té un impacte negatiu en l'<span style="font-style: italic;">accuracy</span> final del model. <br>
 					</p>
